--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
   "name": "my-workshop-stock",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Only stock!",
   "main": "compiled/src/app/main.js",
   "author": "byron1st",
   "license": "MIT",
   "scripts": {
     "test": "gulp test",
-    "start": "gulp test && ./node_modules/.bin/electron ."
+    "start": "gulp test && ./node_modules/.bin/electron .",
+    "pack": "build --dir",
+    "dist": "gulp package && build"
+  },
+  "build": {
+    "appId": "byron1st.my-workshop-stock",
+    "copyright": "Copyright © 2016 Hwi Ahn",
+    "mac": {
+      "category": "public.app-category.productivity"
+    },
+    "win": {
+      "iconUrl": "http://alcyone.kaist.ac.kr/byron1st/my-workshop/blob/feature/018_refactoring_proj/build/icon.ico"
+    }
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
@@ -15,6 +27,7 @@
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "electron": "^1.4.10",
+    "electron-builder": "^10.9.2",
     "eslint": "^3.11.1",
     "eslint-plugin-react": "^6.7.1",
     "gulp": "^3.9.1",
@@ -24,6 +37,10 @@
     "gulp-sass": "^2.3.2",
     "semantic-ui": "^2.2.6",
     "sinon": "^1.17.6"
+  },
+  "optionalDependencies": {
+    "7zip-bin-mac": "^1.x.x",
+    "7zip-bin-win": "^2.x.x"
   },
   "dependencies": {
     "immutable": "^3.8.1",
