--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
+    "jquery-ui-dist": "^1.12.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
