--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery-ui-dist": "^1.12.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "semantic-ui": "^2.2.7",
     "semantic-ui-calendar": "0.0.6"
   }
 }
