--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "byron1st",
   "license": "MIT",
   "scripts": {
-    "test": "gulp test",
+    "test": "./node_modules/.bin/standard --fix && gulp test",
     "start": "gulp test && ./node_modules/.bin/electron .",
     "pack": "build --dir",
     "dist": "gulp package && build"
@@ -21,24 +21,30 @@
       "iconUrl": "http://alcyone.kaist.ac.kr/byron1st/my-workshop/blob/feature/018_refactoring_proj/build/icon.ico"
     }
   },
+  "standard": {
+    "globals": [
+      "$"
+    ],
+    "ignore": [
+      "/public/**"
+    ]
+  },
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "chai": "^3.5.0",
     "del": "^2.2.2",
     "devtron": "^1.4.0",
-    "electron": "^1.4.10",
-    "electron-builder": "^10.9.2",
-    "eslint": "^3.11.1",
-    "eslint-plugin-react": "^6.7.1",
+    "electron": "^1.4.15",
+    "electron-builder": "^11.4.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-electron-mocha": "^1.2.3",
-    "gulp-eslint": "^3.0.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^2.2.3",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.4.0",
     "semantic-ui": "^2.2.7",
-    "sinon": "^1.17.6"
+    "sinon": "^1.17.7",
+    "standard": "^8.6.0"
   },
   "optionalDependencies": {
     "7zip-bin-mac": "^1.x.x",
@@ -48,8 +54,8 @@
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "jquery-ui-dist": "^1.12.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "semantic-ui": "^2.2.7",
     "semantic-ui-calendar": "0.0.6"
   }
